Allow mday in Date.iso8601 to be omitted

[Bug #12285]